fix: convert rem in footer css to px and fix gap styling for mobile

--- a/holy-grail-frontend/src/features/Footer/Footer.css
+++ b/holy-grail-frontend/src/features/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
     background-color: #FFFFFF;
-    margin-top: 3rem;
+    margin-top: 48px;
     border-top: 1px solid rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column;
-    padding: 2rem 0;
+    padding: 32px;
 }
 
 .footer-container {
@@ -13,19 +13,18 @@
     flex-direction: row;
     justify-content: center;
     margin: 16px auto;
-    gap: 2rem 5rem;
+    gap: 64px;
 }
 
 .footer-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 2rem 5rem;
 }
 
 .footer-logo-section {
     display: flex;
     justify-content: center;
-    padding-bottom: 1.5rem;
+    padding-bottom: 16px;
 }
 
 .footer-logo-image {
@@ -35,7 +34,7 @@
 
 .footer-title {
     font-weight: 600;
-    margin-bottom: 1rem;
+    margin-bottom: 16px;
 }
 
 .footer-content:hover {
@@ -43,9 +42,9 @@
 }
 
 .footer-copyright-section {
-    padding-top: 1.5rem;
+    padding-top: 24px;
     text-align: center;
-    font-size: 0.875rem;
+    font-size: 16px;
 }
 
 @media screen and (max-width: 913px) {
@@ -57,5 +56,6 @@
     .footer-container {
         flex-direction: column;
         text-align: center;
+        gap: 24px;
     }
 }
